[tool.poetry]
name = "home-work-19-1"
version = "0.1.0"
description = ""
authors = ["User <lenovnikolas@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_19"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

